# idlez

./: .gitignore  MANIFEST.in  README.md  __main__.py  flake.nix  nixos-module.nix  pyproject.toml
idlez/: __init__.py  bot.py  cli.py  events.py  game.py  store.py
idlez/data/: __init__.py  data.py  elements.dhall  encounters.dhall  event_messages.json  messages.json
idlez/events/: __init__.py  components.py
tests/: test_bot.py  test_data.py  test_event_announcement.py  test_noise_intake.py
