[build-system]
requires = [
    "setuptools>=52",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "idlez"
version = "0.0.1"
authors = [
  { name="Wanja Chresta", email="idlez@monoid.li" },
]
description = "A zombie idle game for Discord"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "discord.py >= 2.0.0"
]

[project.optional-dependencies]
dev = [
    "black",
]
test = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
idlez = "idlez.cli:main"

[project.urls]
homepage = "https://github.com/wchresta/idlez"
issues = "https://github.com/wcchresta/idlez/issues"

[tool.setuptools]
packages = ["idlez"]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=term-missing"
testpaths = ["tests"]
